// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`pdip (default 8 pins) 1`] = `
[
  {
    "hole_diameter": 0.8,
    "hole_offset_x": 0,
    "hole_offset_y": 0,
    "hole_shape": "circle",
    "layers": [
      "top",
      "bottom",
    ],
    "pad_shape": "rect",
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "1",
    ],
    "rect_pad_height": 1.6,
    "rect_pad_width": 1.6,
    "shape": "circular_hole_with_rect_pad",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": 3.81,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "2",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": 1.27,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "3",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": -1.27,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "4",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": -3.81,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "5",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": -3.81,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "6",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": -1.27,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "7",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": 1.27,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "8",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": 3.81,
  },
  {
    "layer": "top",
    "pcb_component_id": "",
    "pcb_silkscreen_path_id": "silkscreen_path_1",
    "route": [
      {
        "x": -2.51,
        "y": -4.8100000000000005,
      },
      {
        "x": -2.51,
        "y": 4.8100000000000005,
      },
      {
        "x": -0.8366666666666666,
        "y": 4.8100000000000005,
      },
      {
        "x": -0.7729792088677766,
        "y": 4.489821528254542,
      },
      {
        "x": -0.5916126735927446,
        "y": 4.218387326407256,
      },
      {
        "x": -0.3201784717454584,
        "y": 4.037020791132224,
      },
      {
        "x": 0.00000000000000005123105776433094,
        "y": 3.973333333333334,
      },
      {
        "x": 0.3201784717454585,
        "y": 4.037020791132224,
      },
      {
        "x": 0.5916126735927447,
        "y": 4.218387326407256,
      },
      {
        "x": 0.7729792088677766,
        "y": 4.489821528254542,
      },
      {
        "x": 0.8366666666666666,
        "y": 4.8100000000000005,
      },
      {
        "x": 2.51,
        "y": 4.8100000000000005,
      },
      {
        "x": 2.51,
        "y": -4.8100000000000005,
      },
      {
        "x": -2.51,
        "y": -4.8100000000000005,
      },
    ],
    "stroke_width": 0.1,
    "type": "pcb_silkscreen_path",
  },
  {
    "anchor_alignment": "center",
    "anchor_position": {
      "x": 0,
      "y": 5.3100000000000005,
    },
    "font": "tscircuit2024",
    "font_size": 0.4,
    "layer": "top",
    "pcb_component_id": "pcb_component_1",
    "pcb_silkscreen_text_id": "silkscreen_text_1",
    "text": "{REF}",
    "type": "pcb_silkscreen_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": 3.81,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_1",
    "pcb_fabrication_note_text_id": "pin_1",
    "text": "{pin1}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": 1.27,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_2",
    "pcb_fabrication_note_text_id": "pin_2",
    "text": "{pin2}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": -1.27,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_3",
    "pcb_fabrication_note_text_id": "pin_3",
    "text": "{pin3}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": -3.81,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_4",
    "pcb_fabrication_note_text_id": "pin_4",
    "text": "{pin4}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": -3.81,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_5",
    "pcb_fabrication_note_text_id": "pin_5",
    "text": "{pin5}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": -1.27,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_6",
    "pcb_fabrication_note_text_id": "pin_6",
    "text": "{pin6}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": 1.27,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_7",
    "pcb_fabrication_note_text_id": "pin_7",
    "text": "{pin7}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": 3.81,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_8",
    "pcb_fabrication_note_text_id": "pin_8",
    "text": "{pin8}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "layer": "top",
    "outline": [
      {
        "x": -4.86,
        "y": 5.33,
      },
      {
        "x": -4.86,
        "y": 5.33,
      },
      {
        "x": -4.86,
        "y": 5.33,
      },
      {
        "x": 4.86,
        "y": 5.33,
      },
      {
        "x": 4.86,
        "y": 5.33,
      },
      {
        "x": 4.86,
        "y": 5.33,
      },
      {
        "x": 4.86,
        "y": -5.33,
      },
      {
        "x": 4.86,
        "y": -5.33,
      },
      {
        "x": 4.86,
        "y": -5.33,
      },
      {
        "x": -4.86,
        "y": -5.33,
      },
      {
        "x": -4.86,
        "y": -5.33,
      },
      {
        "x": -4.86,
        "y": -5.33,
      },
    ],
    "pcb_component_id": "",
    "pcb_courtyard_outline_id": "",
    "type": "pcb_courtyard_outline",
  },
]
`;

exports[`pdip (16 pins) 1`] = `
[
  {
    "hole_diameter": 0.8,
    "hole_offset_x": 0,
    "hole_offset_y": 0,
    "hole_shape": "circle",
    "layers": [
      "top",
      "bottom",
    ],
    "pad_shape": "rect",
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "1",
    ],
    "rect_pad_height": 1.6,
    "rect_pad_width": 1.6,
    "shape": "circular_hole_with_rect_pad",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": 8.89,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "2",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": 6.3500000000000005,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "3",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": 3.8100000000000005,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "4",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": 1.2700000000000005,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "5",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": -1.2699999999999996,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "6",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": -3.8099999999999987,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "7",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": -6.35,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "8",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": -3.81,
    "y": -8.89,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "9",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": -8.89,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "10",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": -6.3500000000000005,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "11",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": -3.8100000000000005,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "12",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": -1.2700000000000005,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "13",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": 1.2699999999999996,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "14",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": 3.8099999999999987,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "15",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": 6.35,
  },
  {
    "hole_diameter": 0.8,
    "layers": [
      "top",
      "bottom",
    ],
    "outer_diameter": 1.6,
    "pcb_plated_hole_id": "",
    "pcb_port_id": "",
    "port_hints": [
      "16",
    ],
    "shape": "circle",
    "type": "pcb_plated_hole",
    "x": 3.81,
    "y": 8.89,
  },
  {
    "layer": "top",
    "pcb_component_id": "",
    "pcb_silkscreen_path_id": "silkscreen_path_1",
    "route": [
      {
        "x": -2.51,
        "y": -9.89,
      },
      {
        "x": -2.51,
        "y": 9.89,
      },
      {
        "x": -0.8366666666666666,
        "y": 9.89,
      },
      {
        "x": -0.7729792088677766,
        "y": 9.569821528254542,
      },
      {
        "x": -0.5916126735927446,
        "y": 9.298387326407255,
      },
      {
        "x": -0.3201784717454584,
        "y": 9.117020791132225,
      },
      {
        "x": 0.00000000000000005123105776433094,
        "y": 9.053333333333335,
      },
      {
        "x": 0.3201784717454585,
        "y": 9.117020791132225,
      },
      {
        "x": 0.5916126735927447,
        "y": 9.298387326407257,
      },
      {
        "x": 0.7729792088677766,
        "y": 9.569821528254542,
      },
      {
        "x": 0.8366666666666666,
        "y": 9.89,
      },
      {
        "x": 2.51,
        "y": 9.89,
      },
      {
        "x": 2.51,
        "y": -9.89,
      },
      {
        "x": -2.51,
        "y": -9.89,
      },
    ],
    "stroke_width": 0.1,
    "type": "pcb_silkscreen_path",
  },
  {
    "anchor_alignment": "center",
    "anchor_position": {
      "x": 0,
      "y": 10.39,
    },
    "font": "tscircuit2024",
    "font_size": 0.4,
    "layer": "top",
    "pcb_component_id": "pcb_component_1",
    "pcb_silkscreen_text_id": "silkscreen_text_1",
    "text": "{REF}",
    "type": "pcb_silkscreen_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": 8.89,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_1",
    "pcb_fabrication_note_text_id": "pin_1",
    "text": "{pin1}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": 6.3500000000000005,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_2",
    "pcb_fabrication_note_text_id": "pin_2",
    "text": "{pin2}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": 3.8100000000000005,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_3",
    "pcb_fabrication_note_text_id": "pin_3",
    "text": "{pin3}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": 1.2700000000000005,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_4",
    "pcb_fabrication_note_text_id": "pin_4",
    "text": "{pin4}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": -1.2699999999999996,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_5",
    "pcb_fabrication_note_text_id": "pin_5",
    "text": "{pin5}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": -3.8099999999999987,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_6",
    "pcb_fabrication_note_text_id": "pin_6",
    "text": "{pin6}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": -6.35,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_7",
    "pcb_fabrication_note_text_id": "pin_7",
    "text": "{pin7}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": -5.21,
      "y": -8.89,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_8",
    "pcb_fabrication_note_text_id": "pin_8",
    "text": "{pin8}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": -8.89,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_9",
    "pcb_fabrication_note_text_id": "pin_9",
    "text": "{pin9}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": -6.3500000000000005,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_10",
    "pcb_fabrication_note_text_id": "pin_10",
    "text": "{pin10}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": -3.8100000000000005,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_11",
    "pcb_fabrication_note_text_id": "pin_11",
    "text": "{pin11}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": -1.2700000000000005,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_12",
    "pcb_fabrication_note_text_id": "pin_12",
    "text": "{pin12}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": 1.2699999999999996,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_13",
    "pcb_fabrication_note_text_id": "pin_13",
    "text": "{pin13}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": 3.8099999999999987,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_14",
    "pcb_fabrication_note_text_id": "pin_14",
    "text": "{pin14}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": 6.35,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_15",
    "pcb_fabrication_note_text_id": "pin_15",
    "text": "{pin15}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "anchor_alignment": "top_left",
    "anchor_position": {
      "x": 5.21,
      "y": 8.89,
    },
    "font": "tscircuit2024",
    "font_size": 0.3,
    "layer": "top",
    "pcb_component_id": "pin_16",
    "pcb_fabrication_note_text_id": "pin_16",
    "text": "{pin16}",
    "type": "pcb_fabrication_note_text",
  },
  {
    "layer": "top",
    "outline": [
      {
        "x": -4.86,
        "y": 10.410000000000002,
      },
      {
        "x": -4.86,
        "y": 10.410000000000002,
      },
      {
        "x": -4.86,
        "y": 10.410000000000002,
      },
      {
        "x": 4.86,
        "y": 10.410000000000002,
      },
      {
        "x": 4.86,
        "y": 10.410000000000002,
      },
      {
        "x": 4.86,
        "y": 10.410000000000002,
      },
      {
        "x": 4.86,
        "y": -10.410000000000002,
      },
      {
        "x": 4.86,
        "y": -10.410000000000002,
      },
      {
        "x": 4.86,
        "y": -10.410000000000002,
      },
      {
        "x": -4.86,
        "y": -10.410000000000002,
      },
      {
        "x": -4.86,
        "y": -10.410000000000002,
      },
      {
        "x": -4.86,
        "y": -10.410000000000002,
      },
    ],
    "pcb_component_id": "",
    "pcb_courtyard_outline_id": "",
    "type": "pcb_courtyard_outline",
  },
]
`;
